--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@
 
     justify-content: center;
     flex-wrap: wrap;
-    background-image: url("/img/background-header.jpg");
+    background-image: url("./img/background-header.jpg");
     background-position: center;
     background-size: cover;
     flex-direction: column;
