--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 #0D1749 */
 html {
     scroll-behavior: smooth;
+    min-width: 320px;
 }
 * {
     margin: 0;
@@ -114,6 +115,7 @@ html {
 }
 
 .mainheader-button {
+   
     width: 200px;
     padding: 10px 20px;
     border-radius: 5px;
@@ -122,6 +124,16 @@ html {
     color: #F0F0F0;
     margin-left: 30vw;
     position: relative;
+}
+.mainheader-button a{
+    /* width: 200px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: 1px solid;
+    background-color: #0D1749;
+    color: #F0F0F0;
+    margin-left: 30vw;
+    position: relative; */
 }
 
 
@@ -202,7 +214,8 @@ html {
 .advantage-item .item-text {
     font-size: 13px;
     font-weight: 100;
-    width: 105px;
+    width: 100px;
+    padding-left: 5px;
 }
 
 .advantage-item .item-text div:first-child {
@@ -249,7 +262,7 @@ html {
     margin: 25px 0;
 }
 /* Slideshow container */
-.slideshow-container {
+.slides-container {
     max-width: 900px;
     position: relative;
     margin: auto;
@@ -451,7 +464,7 @@ footer #designed{
 
     width: 100%;
     height: 100vh;
-    margin: 0 auto;
+    
     position: fixed;
     top: 0;
     background-color: rgba(150, 150, 150, .1);
@@ -485,7 +498,7 @@ footer #designed{
     text-decoration: none;
     color: black;
     text-align: center;
-
+    margin: 0;
 
 
     font-size: 20px;
@@ -540,11 +553,20 @@ footer #designed{
         margin: 0 auto;
         position: relative;
     }
+    .mainheader-button-a{
+        margin: 0 auto;
+    }
     .form-container{
         width: 100%;
 
 }
 .formular{
     padding: 50px 0;
+}
+.item-text{
+    font-size: 10px;
+}
+.advantages{
+    padding: 60px 0;
 }
 }
