--- a/style.css
+++ b/style.css
@@ -33,18 +33,12 @@ html {
     position: absolute;
     top: 0;
     background-color: rgba(150, 150, 150, .1);
-
-
-
 }
 
 .mainnav a {
     text-decoration: none;
     height: 60px;
     color: black;
-
-
-
     font-size: 20px;
     line-height: 60px;
     margin: 0 20px;
@@ -125,32 +119,8 @@ html {
     margin-left: 30vw;
     position: relative;
 }
-.mainheader-button a{
-    /* width: 200px;
-    padding: 10px 20px;
-    border-radius: 5px;
-    border: 1px solid;
-    background-color: #0D1749;
-    color: #F0F0F0;
-    margin-left: 30vw;
-    position: relative; */
-}
-
-
 
 /* site */
-
-
-
-/* 
-.main-container {
-    
-    max-width: 90vw;
-    margin: 0 auto;
-} */
-
-
-
 /* o firmie */
 .about-company {
     display: flex;
@@ -187,28 +157,16 @@ html {
 
 
 }
-
-
 .advantage-item {
    
     display: flex;
     flex: 25%;
     justify-content: center;
-  
-    
-    
-
 }
-
-
 .advantage-item .fas {
     font-size: 45px;
     display: block;
-    width: 50px;
-    
-    
-    
-    
+    width: 60px;    
 }
 
 .advantage-item .item-text {
@@ -217,7 +175,6 @@ html {
     width: 100px;
     padding-left: 5px;
 }
-
 .advantage-item .item-text div:first-child {
     font-size: 20px;
 }
@@ -231,15 +188,12 @@ html {
     flex-wrap: wrap;
     background-color: #fff;
 }
-
 .section-title {
     flex: 100%;
     text-align: center;
     font-size: 30px;
     padding: 0 0 30px 0;
-
 }
-
 .offer-item {
     padding: 30px;
     flex: 20%;
@@ -247,7 +201,6 @@ html {
     flex-wrap: wrap;
     justify-content: center;
     text-align: center;
-
 }
 
 .offer-item i {
@@ -261,19 +214,15 @@ html {
 .gallery{
     margin: 25px 0;
 }
-/* Slideshow container */
 .slides-container {
     max-width: 900px;
     position: relative;
     margin: auto;
 }
-
-/* Hide the images by default */
-.mySlides {
+.slides {
     display: none;
 }
 
-/* Next & previous buttons */
 .prev,
 .next {
     cursor: pointer;
@@ -290,20 +239,14 @@ html {
     user-select: none;
     background-color: rgba(50, 50, 50, 0.5);
 }
-
-/* Position the "next button" to the right */
 .next {
     right: 0;
     border-radius: 3px 0 0 3px;
 }
-
-/* On hover, add a black background color with a little bit see-through */
 .prev:hover,
 .next:hover {
     background-color: rgba(0, 0, 0, 0.8);
 }
-
-/* Caption text */
 .text {
     color: #f2f2f2;
     font-size: 15px;
@@ -313,8 +256,6 @@ html {
     width: 100%;
     text-align: center;
 }
-
-/* Number text (1/3 etc) */
 .numbertext {
     color: #f2f2f2;
     font-size: 12px;
@@ -322,9 +263,7 @@ html {
     position: absolute;
     top: 0;
 }
-
-/* Fading animation */
-.fade {
+.gallery-animation {
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
     animation-name: fade;
@@ -410,15 +349,7 @@ form{
     margin: 0 10px;
     
 }
-
-
-
-
-
-
-
-
-
+/* footer */
 footer{
     background-color: #0D1749;
    color: white;
@@ -430,13 +361,10 @@ footer{
     width: 100%;
     display: flex;
    text-align: center;
-   
-  
 }
 .column{
     flex: 50%;
-    text-align: center;
-    
+    text-align: center;  
 }
 footer #designed{
     margin-top: 15px;
@@ -444,6 +372,7 @@ footer #designed{
     font-size: 10px;
 }
 
+/* media */
 @media (max-width:1000px) {
     .offer-item {
         flex: 30%;
@@ -514,6 +443,9 @@ footer #designed{
 }
 .unvisible{
     display: none;
+}
+.offer{
+    padding: 50px 0;
 }
 }
 
